# AoC2022

./: .gitignore  Makefile.am  README.md  configure.ac  installer.sh
src/utils/: Makefile.am  read_in.cpp  read_in.h
