AC_INIT(PFICT, 1.0)
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AM_INIT_AUTOMAKE
AC_LANG([C++])

AC_SUBST([AM_CXXFLAGS])
AC_SUBST([AM_LDFLAGS])
AC_SUBST([LIBS])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/utils/Makefile])
AC_CONFIG_FILES([src/bin/day1/Makefile])
AC_CONFIG_FILES([src/bin/day2/Makefile])
AC_CONFIG_FILES([src/bin/day3/Makefile])
AC_CONFIG_FILES([src/bin/day4/Makefile])
AC_CONFIG_FILES([src/bin/day5/Makefile])
AC_CONFIG_FILES([src/bin/day6/Makefile])
AC_CONFIG_FILES([src/bin/day7/Makefile])

AC_OUTPUT
